fixed: video player of cards wrong positioned

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -158,12 +158,12 @@
 
 
 .tv1-card-video{
-   margin-top: -59%;
+   margin-bottom: -55%;
    margin-left: 13%;
    height: 50%;
    width: 70%;
    display: block;
-   object-fit: contain;
+   
 
 }
 
@@ -197,7 +197,7 @@
 }
 
 .tv2-card-video{
-    margin-top: -70%;
+    margin-bottom: -40%;
     margin-left: 17%;
     height: 100%;
     width: 62%;
